comment wsm6636/blog@455f3782fd1dc6b604e1826edb9b8e529b220442

--- a/about/index.html
+++ b/about/index.html
@@ -150,7 +150,7 @@
             data-repo="wsm6636/wsm6636.github.io"
             data-repo-id="R_kgD00B-W5w"
             data-category="Announcements"
-            data-category-id="DIC_kwD00B-W584Cnhn"
+            data-category-id="DIC_kwD00B-W584Cnhnk"
             data-mapping="pathname"
             data-strict="0"
             
