comment wsm6636/blog@4bc67f75dcd7c508e6dcec903198476db7507347

--- a/about/index.html
+++ b/about/index.html
@@ -150,7 +150,7 @@
             data-repo="wsm6636/wsm6636.github.io"
             data-repo-id="R_kgDOOB-W5w"
             data-category="Announcements"
-            data-category-id="DIC_kwDOOB-W584Cnhnk"
+            data-category-id="DIC_kwDOOB-W584CnhnK"
             data-mapping="pathname"
             data-strict="0"
             
